--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <title>Graveyard</title>
   </head>
 
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.7/pixi.min.js"></script>
   <script type="module" src="client.js"></script>
-
   <body></body>
 </html>
