--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   </head>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.8.7/pixi.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc.3/pixi.min.js"></script>
   <script type="module" src="client.js"></script>
   <body></body>
 </html>
