--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   </head>
 
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc.3/pixi.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.0/pixi.min.js"></script>
   <script src="https://unpkg.com/@reactivex/rxjs@6.0.0/dist/global/rxjs.umd.js"></script>
-  <script type="module" src="client/client.js"></script>
+  <script type="module" src="client.js"></script>
   <body></body>
 </html>
