--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>Graveyard</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.0/pixi.js"></script>
+    <script src="https://unpkg.com/@reactivex/rxjs@6.0.0/dist/global/rxjs.umd.js"></script>
+    <script type="module" src="client.js"></script>
+    <style>
+      div {
+        display: inherit;
+      }
+    </style>
   </head>
-
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.2.0/pixi.js"></script>
-  <script src="https://unpkg.com/@reactivex/rxjs@6.0.0/dist/global/rxjs.umd.js"></script>
-  <script type="module" src="client.js"></script>
   <body></body>
 </html>
