added modal swapping

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <script src="https://unpkg.com/@reactivex/rxjs@6.0.0/dist/global/rxjs.umd.js"></script>
     <script type="module" src="client.js"></script>
     <style>
+      body {
+        overflow: hidden;
+      }
       div {
         display: inherit;
       }
